<resources>
    <string name="app_name">My Application</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">lorem</string>
    <string name="moon">moon</string>
    <string name="sun">sun</string>
    <string name="sunrise_time">Sunrise (time)</string>
    <string name="sunrise_azimuth">Sunrise (azimuth)</string>
    <string name="sunset_time">Sunset (time)</string>
    <string name="sunset_azimuth">Sunset (azimuth)</string>
    <string name="dusk">Dusk</string>
    <string name="twilight">Twilight</string>
    <string name="moonrise">Moonrise</string>
    <string name="moonset">Moonset</string>
    <string name="new_moon">New moon</string>
    <string name="full_moon">Full moon</string>
    <string name="moon_phase">Moon phase</string>
    <string name="day">Day</string>
    <string name="latitude_and_longitude">latitude and longitude:</string>
    <string name="refresh_rate">Refresh rate</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>45</item>
        <item>60</item>
    </string-array>
</resources>