<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/day">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintStart_toStartOf="parent">

        <TextClock
            android:id="@+id/time"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            android:gravity="center"
            android:format12Hour="hh:mm:ss a"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeVeryLarge" />
        <TextView
            android:id="@+id/latLong"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/latitude_and_longitude"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeSmall" />

        <ImageView
            android:id="@+id/imageView"
            android:width="0dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowSpan="3"
            android:layout_rowWeight="3"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_gravity="fill"
            android:contentDescription="@string/moon"
            android:src="@drawable/moon"
            android:scaleX="0.7"
            android:scaleY="0.7"/>

        <TextView
            android:id="@+id/textView"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/moonrise"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeSmall" />

        <TextView
            android:id="@+id/textView10"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/moonset"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeSmall" />

        <TextView
            android:id="@+id/moonrise"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:text="11:49:51"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMedium" />

        <TextView
            android:id="@+id/moonset"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:text="11:49:51"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMedium" />

        <TextView
            android:id="@+id/textView3"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/new_moon"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeSmall" />

        <TextView
            android:id="@+id/textView11"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/full_moon"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeSmall" />

        <TextView
            android:id="@+id/newMoon"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:text="11:49:51"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMedium" />

        <TextView
            android:id="@+id/fullMoon"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMedium" />

        <TextView
            android:id="@+id/textView6"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/moon_phase"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeSmall" />

        <TextView
            android:id="@+id/textView12"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/day"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeSmall" />

        <TextView
            android:id="@+id/moonPhase"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:text="11:49:51"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMedium" />

        <TextView
            android:id="@+id/calendarDay"
            android:width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:text="11:49:51"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeMedium" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>